test/types/sync/ferguson/sync-coerce-to-ref.good
sync-coerce-to-ref.chpl:5: In function 'test':
sync-coerce-to-ref.chpl:10: error: value from coercion passed to ref formal 'arg'
sync-coerce-to-ref.chpl:1: note: to function 'acceptRef' defined here
