test/types/sync/ferguson/sync-coerce-to-ref.chpl
proc acceptRef(ref arg:int) {
  arg = 7;
}

proc test() {
  var x: sync int;

  x = 1;

  acceptRef(x);

  writeln(x.readXX());
}

test();
